@@ -1,3 +1,8 @@
+2003-11-07  Per Bothner  <pbothner@apple.com>
+
+	* c-decl.c (start_struct):  Increment currently_nested.
+	(finish_struct):  Decrement currently_nested.
+
 2003-11-05  Per Bothner  <pbothner@apple.com>
 
 	* c-common.c (create_builtins_fragment):  Copy name.
